# tetsuya-site

./: .env  .flake8  .gitignore  appspec.yml  buildspec.yml  db.sqlite3  manage.py  new  package-lock.json  pyproject.toml  requirements.txt
async_app/: admin.py  models.py  serializers.py  urls.py  views.py
async_app/migrations/: 0001_initial.py
chat_app/: adapter.py  admin.py  email_func.py  forms.py  models.py  serializers.py  urls.py  utils.py  views.py
chat_app/account_file/: adapter.py  forms.py  serializers.py  utils.py  views.py
chat_app/migrations/: 0001_initial.py  0002_userfile_alter_user_username.py  0003_userfile_name.py  0004_authcode.py
scripts/: install_os_dependencies.sh  install_python_dependencies.sh  install_services.sh  start_application.sh  stop_application.sh
templates/account/email/: email_confirmation_signup_message.txt  password_reset_key_message.txt
tetsuya_site/: asgi.py  celery.py  storage_backends.py  tasks.py  urls.py  wsgi.py
tetsuya_site/settings/: base.py  dev.py  prod.py
